--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "shortid": "^2.2.16",
+    "valid-url": "^1.0.9"
   },
   "name": "url-shortener",
   "description": "",
