--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
+    "nodemon": "^2.0.12",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
